--- a/core/catalog/include_dept_end.phtml
+++ b/core/catalog/include_dept_end.phtml
@@ -4,4 +4,4 @@
 	set conn_ss = nothing
 	set conn_ss1 = nothing
 %>
-<!--#INCLUDE FILE="../../i_adoclose.phtml"-->
+<!--#INCLUDE FILE="../i_adoclosed.phtml"-->
