--- a/core/catalog/include_dept_start.phtml
+++ b/core/catalog/include_dept_start.phtml
@@ -252,9 +252,9 @@ end function
 	
 	'=================================================================================================
 	
-	'==============================================================================
+	'=================================================================================================
 	' GET DEPT INFO
-	'==============================================================================
+	'=================================================================================================
 	
 	sql = "SELECT * FROM " & g_storeid & "_dept WHERE dept_id='" & dept_ID & "'"
     Set rsDeptName = dbconn.Execute(sql)
@@ -280,8 +280,6 @@ end function
 		icecat_category = rsDeptName("icecat_category")
 		dept_url_key = rsDeptName("url_key")
 		
-		g_dept_name = dept_name
-		g_dept_id = dept_id
 	    cont_ok = true
     else
 	    cont_ok = false
@@ -969,10 +967,21 @@ end function
 			g_page_title = dept_page_title
 			
 			'==============================================================================
-			' start of private catalog
+			' end of private catalog
 			'==============================================================================
 		
 		end if 'icecat
+		
 	end if 'cont_ok
+	
+	'==============================================================================
+	' DISPLAY VALUES
+	'==============================================================================
+	g_page_title = dept_page_title
+	g_dept_name = dept_name
+	g_dept_id = dept_id
+	
+	g_dept_name = TranslateX(g_dept_name, 1, g_dept_id, 1)
+	'==============================================================================
 	
 %>
