--- a/core/include_error404_start.phtml
+++ b/core/include_error404_start.phtml
@@ -1,6 +1,6 @@
 <!--#INCLUDE FILE="../local/local.phtml"-->
 <!--#INCLUDE FILE="../core/i_initsession.phtml"-->
-<!--#INCLUDE FILE="../core/i_adodb.phtml"-->
+<!--#INCLUDE FILE="../core/i_adoopen.phtml"-->
 <!--#INCLUDE FILE="../util/xt_func_session.phtml"-->
 <!--#INCLUDE FILE="../util/xt_func_util.phtml" -->
 <!--#INCLUDE FILE="../util/xt_func_string.phtml"-->
