--- a/core/include_store_view_selector.phtml
+++ b/core/include_store_view_selector.phtml
@@ -3,17 +3,23 @@
 	if storeviewid = "" then
 	else
 		Session("CURRENT_VIEW_ID") = storeviewid
+		Response.cookies(g_storeid)("CURRENT_VIEW_ID") = storeviewid
 		SELECT CASE storeviewid
 		CASE "1"
 			Session("CURRENT_LOCALE") = "en_US"
+			Response.Cookies(g_storeid)("CURRENT_LOCALE") = "en_US"
 		CASE "2"
 			Session("CURRENT_LOCALE") = "zh_CN"
+			Response.Cookies(g_storeid)("CURRENT_LOCALE") = "zh_CN"
 		CASE "3"
 			Session("CURRENT_LOCALE") = "ja_JP"
+			Response.Cookies(g_storeid)("CURRENT_LOCALE") = "ja_JP"
 		CASE "4"
 			Session("CURRENT_LOCALE") = "ko_KR"
+			Response.Cookies(g_storeid)("CURRENT_LOCALE") = "ko_KR"
 		CASE ELSE
 			Session("CURRENT_LOCALE") = "en_US"
+			Response.Cookies(g_storeid)("CURRENT_LOCALE") = "en_US"
 		END SELECT
 	end if
 %>	
