--- a/theme/marketshop1/basket.phtml
+++ b/theme/marketshop1/basket.phtml
@@ -1,6 +1,6 @@
 <%
-	Response.CodePage = 1252 
-	Response.CharSet = "windows-1252" 
+	Response.CodePage = 65001
+	Response.CharSet = "UTF-8"
 %>
 <!--#INCLUDE FILE="../../core/checkout/include_basket_start.phtml"-->
 <!--#INCLUDE FILE="template_setting.phtml"-->
