--- a/theme/marketshop1/include/header.phtml
+++ b/theme/marketshop1/include/header.phtml
@@ -7,9 +7,8 @@
 			<div class="pull-left flip left-top">
 				<div class="links">
 					<ul>
-						<li class="mobile"><i class="fa fa-phone"></i>+91 9898777656</li>
-						<li class="email"><a href="mailto:info@marketshop.com"><i class="fa fa-envelope"></i>info@marketshop.com</a></li>
-						<li class="wrap_custom_block hidden-sm hidden-xs"><a>Custom Block<b></b></a>
+						<li class="email"><a href="mailto:support@hubutu.com"><i class="fa fa-envelope"></i>support@hubutu.com</a></li>
+						<li class="wrap_custom_block hidden-sm hidden-xs"><a><%=a("Become Prime Member")%><b></b></a>
 						<div class="dropdown-menu custom_block">
 							<ul>
 								<li>
@@ -25,18 +24,18 @@
 								</tr>
 								<tr>
 									<td>
-										<h4>CMS Blocks</h4>
+										<h4>Membership Only</h4>
 									</td>
 									<td>
-										<h4>Responsive Template</h4>
+										<h4>Membership + Product</h4>
 									</td>
 								</tr>
 								<tr>
 									<td>
-										This is a CMS block. You can insert any content (HTML, Text, Images) Here.
+										1 year Prime Membership
 									</td>
 									<td>
-										This is a CMS block. You can insert any content (HTML, Text, Images) Here.
+										1 year Prime Membership and Product up to 50% discount
 									</td>
 								</tr>
 								<tr>
@@ -53,8 +52,7 @@
 							</ul>
 						</div>
 						</li>
-						<li><a href="#">Wish List (0)</a></li>
-						<li><a href="checkout.html">Checkout</a></li>
+						<li><a href="checkout.html"><%=a("Checkout")%></a></li>
 					</ul>
 				</div>
 				<div id="language" class="btn-group">
@@ -231,369 +229,103 @@
 		<div class="collapse navbar-collapse navbar-ex1-collapse">
 			<ul class="nav navbar-nav">
 				<li><a class="home_link" title="Home" href="<%=g_store_url%>index.phtml"><span>Home</span></a></li>
-				<li class="mega-menu dropdown"><a>Categories</a>
-				<div class="dropdown-menu">
-					<div class="column col-lg-2 col-md-3">
-						<a href="category.html">Clothing</a>
-						<div>
-							<ul>
-								<li><a href="category.html">Men <span>&rsaquo;</span></a>
-								<div class="dropdown-menu">
-									<ul>
-										<li><a href="category.html">Sub Categories</a></li>
-										<li><a href="category.html">Sub Categories</a></li>
-										<li><a href="category.html">Sub Categories</a></li>
-										<li><a href="category.html">Sub Categories</a></li>
-										<li><a href="category.html">Sub Categories New</a></li>
-									</ul>
-								</div>
-								</li>
-								<li><a href="category.html">Women</a></li>
-								<li><a href="category.html">Girls<span>&rsaquo;</span></a>
-								<div class="dropdown-menu">
-									<ul>
-										<li><a href="category.html">Sub Categories </a></li>
-										<li><a href="category.html">Sub Categories New</a></li>
-										<li><a href="category.html">Sub Categories New</a></li>
-									</ul>
-								</div>
-								</li>
-								<li><a href="category.html">Boys</a></li>
-								<li><a href="category.html">Baby</a></li>
-								<li><a href="category.html">Accessories <span>&rsaquo;</span></a>
-								<div class="dropdown-menu">
-									<ul>
-										<li><a href="category.html">New Sub Categories</a></li>
-									</ul>
-								</div>
-								</li>
-							</ul>
-						</div>
-					</div>
-					<div class="column col-lg-2 col-md-3">
-						<a href="category.html">Electronics</a>
-						<div>
-							<ul>
-								<li><a href="category.html">Laptops <span>&rsaquo;</span></a>
-								<div class="dropdown-menu">
-									<ul>
-										<li><a href="category.html">New Sub Categories </a></li>
-										<li><a href="category.html">New Sub Categories </a></li>
-										<li><a href="category.html">Sub Categories New </a></li>
-									</ul>
-								</div>
-								</li>
-								<li><a href="category.html">Desktops <span>&rsaquo;</span></a>
-								<div class="dropdown-menu">
-									<ul>
-										<li><a href="category.html">New Sub Categories </a></li>
-										<li><a href="category.html">Sub Categories New </a></li>
-										<li><a href="category.html">Sub Categories New </a></li>
-									</ul>
-								</div>
-								</li>
-								<li><a href="category.html">Cameras <span>&rsaquo;</span></a>
-								<div class="dropdown-menu">
-									<ul>
-										<li><a href="category.html">New Sub Categories</a></li>
-									</ul>
-								</div>
-								</li>
-								<li><a href="category.html">Mobile Phones <span>&rsaquo;</span></a>
-								<div class="dropdown-menu">
-									<ul>
-										<li><a href="category.html">New Sub Categories</a></li>
-										<li><a href="category.html">New Sub Categories</a></li>
-									</ul>
-								</div>
-								</li>
-								<li><a href="category.html">TV &amp; Home Audio <span>&rsaquo;</span></a>
-								<div class="dropdown-menu">
-									<ul>
-										<li><a href="category.html">New Sub Categories </a></li>
-										<li><a href="category.html">Sub Categories New </a></li>
-									</ul>
-								</div>
-								</li>
-								<li><a href="category.html">MP3 Players</a></li>
-							</ul>
-						</div>
-					</div>
-					<div class="column col-lg-2 col-md-3">
-						<a href="category.html">Shoes</a>
-						<div>
-							<ul>
-								<li><a href="category.html">Men</a></li>
-								<li><a href="category.html">Women <span>&rsaquo;</span></a>
-								<div class="dropdown-menu">
-									<ul>
-										<li><a href="category.html">New Sub Categories </a></li>
-										<li><a href="category.html">Sub Categories </a></li>
-									</ul>
-								</div>
-								</li>
-								<li><a href="category.html">Girls</a></li>
-								<li><a href="category.html">Boys</a></li>
-								<li><a href="category.html">Baby</a></li>
-								<li><a href="category.html">Accessories <span>&rsaquo;</span></a>
-								<div class="dropdown-menu">
-									<ul>
-										<li><a href="category.html">New Sub Categories</a></li>
-										<li><a href="category.html">New Sub Categories</a></li>
-										<li><a href="category.html">Sub Categories</a></li>
-									</ul>
-								</div>
-								</li>
-							</ul>
-						</div>
-					</div>
-					<div class="column col-lg-2 col-md-3">
-						<a href="category.html">Watches</a>
-						<div>
-							<ul>
-								<li><a href="category.html">Men's Watches</a></li>
-								<li><a href="category.html">Women's Watches</a></li>
-								<li><a href="category.html">Kids' Watches</a></li>
-								<li><a href="category.html">Accessories</a></li>
-							</ul>
-						</div>
-					</div>
-					<div class="column col-lg-2 col-md-3">
-						<a href="category.html">Jewellery</a>
-						<div>
-							<ul>
-								<li><a href="category.html">Silver <span>&rsaquo;</span></a>
-								<div class="dropdown-menu">
-									<ul>
-										<li><a href="category.html">New Sub Categories</a></li>
-										<li><a href="category.html">New Sub Categories</a></li>
-									</ul>
-								</div>
-								</li>
-								<li><a href="category.html">Gold <span>&rsaquo;</span></a>
-								<div class="dropdown-menu">
-									<ul>
-										<li><a href="category.html">test 1</a></li>
-										<li><a href="category.html">test 2</a></li>
-									</ul>
-								</div>
-								</li>
-								<li><a href="category.html">Diamond</a></li>
-								<li><a href="category.html">Pearl <span>&rsaquo;</span></a>
-								<div class="dropdown-menu">
-									<ul>
-										<li><a href="category.html">New Sub Categories</a></li>
-									</ul>
-								</div>
-								</li>
-								<li><a href="category.html">Men's Jewellery</a></li>
-								<li><a href="category.html">Children's Jewellery <span>&rsaquo;</span></a>
-								<div class="dropdown-menu">
-									<ul>
-										<li><a href="category.html">New Sub Categories </a></li>
-									</ul>
-								</div>
-								</li>
-							</ul>
-						</div>
-					</div>
-					<div class="column col-lg-2 col-md-3">
-						<a href="category.html">Health &amp; Beauty</a>
-						<div>
-							<ul>
-								<li><a href="category.html">Perfumes</a></li>
-								<li><a href="category.html">Makeup</a></li>
-								<li><a href="category.html">Sun Care</a></li>
-								<li><a href="category.html">Skin Care</a></li>
-								<li><a href="category.html">Eye Care</a></li>
-								<li><a href="category.html">Hair Care</a></li>
-							</ul>
-						</div>
-					</div>
-					<div class="column col-lg-2 col-md-3">
-						<a href="category.html">Kids &amp; Babies</a>
-						<div>
-							<ul>
-								<li><a href="category.html">Toys</a></li>
-								<li><a href="category.html">Games <span>&rsaquo;</span></a>
-								<div class="dropdown-menu">
-									<ul>
-										<li><a href="category.html">test 25</a></li>
-									</ul>
-								</div>
-								</li>
-								<li><a href="category.html">Puzzles</a></li>
-								<li><a href="category.html">Hobbies</a></li>
-								<li><a href="category.html">Strollers</a></li>
-								<li><a href="category.html">Health &amp; Safety</a></li>
-							</ul>
-						</div>
-					</div>
-					<div class="column col-lg-2 col-md-3">
-						<a href="category.html">Sports</a>
-						<div>
-							<ul>
-								<li><a href="category.html">Cycling</a></li>
-								<li><a href="category.html">Running</a></li>
-								<li><a href="category.html">Swimming</a></li>
-								<li><a href="category.html">Football</a></li>
-								<li><a href="category.html">Golf</a></li>
-								<li><a href="category.html">Windsurfing</a></li>
-							</ul>
-						</div>
-					</div>
-					<div class="column col-lg-2 col-md-3">
-						<a href="category.html">Home &amp; Garden</a>
-						<div>
-							<ul>
-								<li><a href="category.html">Bedding</a></li>
-								<li><a href="category.html">Food</a></li>
-								<li><a href="category.html">Furniture</a></li>
-								<li><a href="category.html">Kitchen</a></li>
-								<li><a href="category.html">Lighting</a></li>
-								<li><a href="category.html">Tools</a></li>
-							</ul>
-						</div>
-					</div>
-					<div class="column col-lg-2 col-md-3">
-						<a href="category.html">Wines &amp; Spirits</a>
-						<div>
-							<ul>
-								<li><a href="category.html">Wine</a></li>
-								<li><a href="category.html">Whiskey</a></li>
-								<li><a href="category.html">Vodka</a></li>
-								<li><a href="category.html">Liqueurs</a></li>
-								<li><a href="category.html">Beer</a></li>
-							</ul>
-						</div>
-					</div>
-				</div>
-				</li>
-				<li class="menu_brands dropdown"><a href="#">Brands</a>
-				<div class="dropdown-menu">
-					<div class="col-lg-1 col-md-2 col-sm-3 col-xs-6">
-						<a href="#"><img src="image/product/apple_logo-60x60.jpg" title="Apple" alt="Apple"/></a><a href="#">Apple</a>
-					</div>
-					<div class="col-lg-1 col-md-2 col-sm-3 col-xs-6">
-						<a href="#"><img src="image/product/canon_logo-60x60.jpg" title="Canon" alt="Canon"/></a><a href="#">Canon</a>
-					</div>
-					<div class="col-lg-1 col-md-2 col-sm-3 col-xs-6">
-						<a href="#"><img src="image/product/hp_logo-60x60.jpg" title="Hewlett-Packard" alt="Hewlett-Packard"/></a><a href="#">Hewlett-Packard</a>
-					</div>
-					<div class="col-lg-1 col-md-2 col-sm-3 col-xs-6">
-						<a href="#"><img src="image/product/htc_logo-60x60.jpg" title="HTC" alt="HTC"/></a><a href="#">HTC</a>
-					</div>
-					<div class="col-lg-1 col-md-2 col-sm-3 col-xs-6">
-						<a href="#"><img src="image/product/palm_logo-60x60.jpg" title="Palm" alt="Palm"/></a><a href="#">Palm</a>
-					</div>
-					<div class="col-lg-1 col-md-2 col-sm-3 col-xs-6">
-						<a href="#"><img src="image/product/sony_logo-60x60.jpg" title="Sony" alt="Sony"/></a><a href="#">Sony</a>
-					</div>
-					<div class="col-lg-1 col-md-2 col-sm-3 col-xs-6">
-						<a href="#"><img src="image/product/canon_logo-60x60.jpg" title="test" alt="test"/></a><a href="#">test</a>
-					</div>
-					<div class="col-lg-1 col-md-2 col-sm-3 col-xs-6">
-						<a href="#"><img src="image/product/apple_logo-60x60.jpg" title="test 3" alt="test 3"/></a><a href="#">test 3</a>
-					</div>
-					<div class="col-lg-1 col-md-2 col-sm-3 col-xs-6">
-						<a href="#"><img src="image/product/canon_logo-60x60.jpg" title="test 5" alt="test 5"/></a><a href="#">test 5</a>
-					</div>
-					<div class="col-lg-1 col-md-2 col-sm-3 col-xs-6">
-						<a href="#"><img src="image/product/canon_logo-60x60.jpg" title="test 6" alt="test 6"/></a><a href="#">test 6</a>
-					</div>
-					<div class="col-lg-1 col-md-2 col-sm-3 col-xs-6">
-						<a href="#"><img src="image/product/apple_logo-60x60.jpg" title="test 7" alt="test 7"/></a><a href="#">test 7</a>
-					</div>
-					<div class="col-lg-1 col-md-2 col-sm-3 col-xs-6">
-						<a href="#"><img src="image/product/canon_logo-60x60.jpg" title="test1" alt="test1"/></a><a href="#">test1</a>
-					</div>
-					<div class="col-lg-1 col-md-2 col-sm-3 col-xs-6">
-						<a href="#"><img src="image/product/apple_logo-60x60.jpg" title="test2" alt="test2"/></a><a href="#">test2</a>
-					</div>
-				</div>
-				</li>
-				<li class="custom-link"><a href="#">Custom Links</a></li>
-				<li class="dropdown wrap_custom_block hidden-sm hidden-xs"><a>Custom Block</a>
-				<div class="dropdown-menu custom_block">
-					<ul>
-						<li>
-						<table>
-						<tbody>
-						<tr>
-							<td>
-								<img alt="" src="image/banner/cms-block.jpg">
-							</td>
-							<td>
-								<img alt="" src="image/banner/responsive.jpg">
-							</td>
-							<td>
-								<img alt="" src="image/banner/cms-block.jpg">
-							</td>
-						</tr>
-						<tr>
-							<td>
-								<h4>CMS Blocks</h4>
-							</td>
-							<td>
-								<h4>Responsive Template</h4>
-							</td>
-							<td>
-								<h4>Dedicated Support</h4>
-							</td>
-						</tr>
-						<tr>
-							<td>
-								This is a CMS block. You can insert any content (HTML, Text, Images) Here.
-							</td>
-							<td>
-								This is a CMS block. You can insert any content (HTML, Text, Images) Here.
-							</td>
-							<td>
-								This is a CMS block. You can insert any content (HTML, Text, Images) Here.
-							</td>
-						</tr>
-						<tr>
-							<td>
-								<strong><a class="btn btn-primary btn-sm" href="#">Read More</a></strong>
-							</td>
-							<td>
-								<strong><a class="btn btn-primary btn-sm" href="#">Read More</a></strong>
-							</td>
-							<td>
-								<strong><a class="btn btn-primary btn-sm" href="#">Read More</a></strong>
-							</td>
-						</tr>
-						</tbody>
-						</table>
-						</li>
-					</ul>
-				</div>
-				</li>
-				<li class="dropdown information-link"><a>Pages</a>
+				
+				<%
+				'Product Categories..
+				sql = "SELECT * FROM " & g_storeid & "_dept WHERE parent_dept='0' AND include_topnav=1 AND is_hidden=0 ORDER BY dept_row"
+				Set rsDeptClassic = dbconn.Execute(sql)
+				do while not rsDeptClassic.EOF
+					m_dept_id = rsDeptClassic("dept_id")
+					m_dept_name = rsDeptClassic("dept_name")
+					m_has_sub = rsDeptClassic("has_sub")
+					m_use_mfg = rsDeptClassic("dept_use_mfg")
+					m_ec_flag = rsDeptClassic("ec_flag")
+					m_url_key = rsDeptClassic("url_key")
+					
+					m_dept_name = TranslateX(m_dept_name, 1, m_dept_id, 1)
+					if Len(m_url_key) > 0 then
+						m_dept_link = g_store_url & m_url_key & ".html"
+					else
+						m_dept_link = g_store_url & "dept.phtml?dept_id=" & m_dept_id
+					end if
+				%>
+				<li class="dropdown information-link"><a href="<%=m_dept_link%>"><%=m_dept_name%></a>
+				<%
+					sql = "SELECT * FROM " & g_storeid & "_dept WHERE parent_dept='" & m_dept_id & "' AND include_topnav=1 AND is_hidden=0 ORDER BY dept_row"
+					Set rsDeptClassic1 = dbconn.Execute(sql)
+					if not rsDeptClassic1.EOF then
+				%>
 				<div class="dropdown-menu">
 					<ul>
-						<li><a href="login.html">Login</a></li>
-						<li><a href="register.html">Register</a></li>
-						<li><a href="category.html">Category (Grid/List)</a></li>
-						<li><a href="product.html">Product</a></li>
-						<li><a href="cart.html">Shopping Cart</a></li>
-						<li><a href="checkout.html">Checkout</a></li>
-						<li><a href="compare.html">Compare</a></li>
-						<li><a href="wishlist.html">Wishlist</a></li>
-						<li><a href="search.html">Search</a></li>
-					</ul>
-					<ul>
-						<li><a href="about-us.html">About Us</a></li>
-						<li><a href="404.html">404</a></li>
-						<li><a href="elements.html">Elements</a></li>
-						<li><a href="faq.html">Faq</a></li>
-						<li><a href="sitemap.html">Sitemap</a></li>
-						<li><a href="contact-us.html">Contact Us</a></li>
+						<%
+						do while not rsDeptClassic1.EOF
+							m_dept_id_1 = rsDeptClassic1("dept_id")
+							m_dept_name_1  = rsDeptClassic1("dept_name")
+							m_has_sub_1  = rsDeptClassic1("has_sub")
+							m_use_mfg_1  = rsDeptClassic1("dept_use_mfg")
+							m_ec_flag_1  = rsDeptClassic1("ec_flag")
+							m_url_key_1  = rsDeptClassic1("url_key")
+							
+							m_dept_name_1 = TranslateX(m_dept_name_1, 1, m_dept_id_1, 1)
+							if Len(m_url_key_1) > 0 then
+								m_dept_link = g_store_url & m_url_key_1 & ".html"
+							else
+								m_dept_link = g_store_url & "dept.phtml?dept_id=" & m_dept_id_1
+							end if
+						%>
+						<li><a href="<%=m_dept_link%>"><%=m_dept_name_1%></a>
+						<%
+							sql = "SELECT * FROM " & g_storeid & "_dept WHERE parent_dept='" & m_dept_id_1 & "' AND include_topnav=1 AND is_hidden=0 ORDER BY dept_row"
+							Set rsDeptClassic2 = dbconn.Execute(sql)
+							if not rsDeptClassic2.EOF then
+						%>
+						<div class="dropdown-menu">
+							<ul>
+								<%
+								do while not rsDeptClassic2.EOF
+									m_dept_id_2 = rsDeptClassic2("dept_id")
+									m_dept_name_2  = rsDeptClassic2("dept_name")
+									m_has_sub_2  = rsDeptClassic2("has_sub")
+									m_use_mfg_2  = rsDeptClassic2("dept_use_mfg")
+									m_ec_flag_2  = rsDeptClassic2("ec_flag")
+									m_url_key_2  = rsDeptClassic2("url_key")
+									
+									m_dept_name_2 = TranslateX(m_dept_name_2, 1, m_dept_id_2, 1)
+									if Len(m_url_key_2) > 0 then
+										m_dept_link = g_store_url & m_url_key_2 & ".html"
+									else
+										m_dept_link = g_store_url & "dept.phtml?dept_id=" & m_dept_id_2
+									end if
+								%>
+								<li><a href="<%=m_dept_link%>"><%=m_dept_name_2%></a></li>
+								<%
+									rsDeptClassic2.MoveNext
+								loop
+								%>
+							</ul>
+						</div>
+						<%
+							end if
+							rsDeptClassic2.close
+							set rsDeptClassic2 = nothing
+						
+							rsDeptClassic1.MoveNext
+						loop
+						%>
 					</ul>
 				</div>
+				<%
+					end if
+					rsDeptClassic1.close
+					set rsDeptClassic1 = nothing
+				%>
 				</li>
-				<li class="contact-link"><a href="contact-us.html">Contact Us</a></li>
-				<li class="custom-link-right"><a href="#" target="_blank"> Buy Now!</a></li>
+				<%
+					rsDeptClassic.MoveNext
+				loop
+				rsDeptClassic.close
+				set rsDeptClassic = nothing
+				%>
 			</ul>
 		</div>
 		</nav>
