--- a/theme/marketshop1/Error404.phtml
+++ b/theme/marketshop1/Error404.phtml
@@ -1,10 +1,8 @@
 <%
-	'Response.CodePage = 1252 
-	'Response.CharSet = "windows-1252" 
 	Response.CodePage = 65001
 	Response.CharSet = "UTF-8"
 %>
-<!--#INCLUDE FILE="../../core/include_index_start.phtml"-->
+<!--#INCLUDE FILE="../../core/include_error404_start.phtml"-->
 <!--#INCLUDE FILE="template_setting.phtml"-->
 <!DOCTYPE html>
 <html>
@@ -12,27 +10,16 @@
 <!--#INCLUDE FILE="include/head.phtml"-->
 </head>
 <body>
-<!--#INCLUDE FILE="include/after_body_start.phtml"-->
 <div class="wrapper-wide">
 	<!--#INCLUDE FILE="include/header.phtml"-->
 	<div id="container">
-		<!-- Feature Box Start-->
-		<div class="container">
-			<!---1 -->
-		</div>
-		<!-- Feature Box End-->
 		<div class="container">
 			<div class="row">
-				<!-- Left Part Start-->
-				<aside id="column-left" class="col-sm-3 hidden-xs">
-					<!--#INCLUDE FILE="include/left.phtml"-->
-				</aside>
-				<!-- Left Part End-->
 				<!--Middle Part Start-->
-				<div id="content" class="col-sm-9">
-					<!--#INCLUDE FILE="include/index.phtml"-->
+				<div id="content" class="col-sm-12">
+					<!--#INCLUDE FILE="include/error404.phtml"-->
 				</div>
-				<!--Middle Part End-->
+				<!--Middle Part End -->
 			</div>
 		</div>
 	</div>
