--- a/theme/marketshop1/dept.phtml
+++ b/theme/marketshop1/dept.phtml
@@ -1,6 +1,6 @@
 <%
-	Response.CodePage = 1252 
-	Response.CharSet = "windows-1252" 
+	Response.CodePage = 65001
+	Response.CharSet = "UTF-8"
 %>
 <!--#INCLUDE FILE="../../core/catalog/include_dept_start.phtml"-->
 <!--#INCLUDE FILE="template_setting.phtml"-->
@@ -14,7 +14,21 @@
 <div class="wrapper-wide">
 	<!--#INCLUDE FILE="include/header.phtml"-->
 	<div id="container">
-		<!--#INCLUDE FILE="include/dept.phtml"-->
+		<div class="container">
+		<!--#INCLUDE FILE="include/breadcrumb.phtml"-->
+		<div class="row">
+			<!--Left Part Start -->
+			<aside id="column-left" class="col-sm-3 hidden-xs">
+				<!--#INCLUDE FILE="include/left.phtml"-->
+			</aside>
+			<!--Left Part End -->
+			<!--Middle Part Start-->
+			<div id="content" class="col-sm-9">
+				<!--#INCLUDE FILE="include/dept.phtml"-->	
+			</div>
+			<!--Middle Part End -->
+		</div>
+	</div>
 	</div>
 	<!--#INCLUDE FILE="include/footer.phtml"-->
 </div>
